Bug 1923829 - Check the correct frame when iterating over continuations in nsTextFrame::GetRenderedText. r=dshin

For clarity, we refactor body of the loop-over-continuations in
nsTextFrame::GetRenderedText into a helper method AppendRenderedText
that handles a single continuation in the chain.

This avoids the footgun of an nsTextFrame method iterating over its
continuations (using the textFrame variable) but potentially calling
methods of the primary frame within the loop, instead of the current
frame being processed.

Differential Revision: https://phabricator.services.mozilla.com/D225686