layout/generic/nsTextFrame.h
@@ -24,9 +24,10 @@
 #  undef DrawText
 #endif
 
-class nsTextPaintStyle;
 struct SelectionDetails;
+class nsBlockFrame;
 class nsTextFragment;
+class nsTextPaintStyle;
 
 namespace mozilla {
 class SVGContextPaint;
@@ -1081,6 +1082,24 @@ class nsTextFrame : public nsIFrame {
 
   void MaybeSplitFramesForFirstLetter();
   void SetFirstLetterLength(int32_t aLength);
+
+  struct AppendRenderedTextState {
+    // Inputs, constant across all calls in the loop.
+    const uint32_t mStartOffset;
+    const uint32_t mEndOffset;
+    const TextOffsetType mOffsetType;
+    const TrailingWhitespace mTrimTrailingWhitespace;
+    const nsTextFragment* const mTextFrag;
+    // Mutable state, updated as we loop over the continuations.
+    nsBlockFrame* mLineContainer = nullptr;
+    uint32_t mOffsetInRenderedString = 0;
+    bool mHaveOffsets = false;
+  };
+  // Helper for GetRenderedText, to process one frame in the continuation
+  // chain. Returns true if the caller should continue to loop over the
+  // following frames, or false to stop.
+  bool AppendRenderedText(AppendRenderedTextState& aState,
+                          RenderedText& aResult);
 };
 
 MOZ_MAKE_ENUM_CLASS_BITWISE_OPERATORS(nsTextFrame::TrimmedOffsetFlags)
